    (cnauroth)

    HADOOP-11077. NPE if hosts not specified in ProxyUsers. (gchanan via tucu)

    HADOOP-9989. Bug introduced in HADOOP-9374, which parses the -tokenCacheFile 
    as binary file but set it to the configuration as JSON file. (zxu via tucu)

    HADOOP-11085. Excessive logging by org.apache.hadoop.util.Progress when
    value is NaN (Mit Desai via jlowe)

Release 2.5.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
  
    HADOOP-10956. Fix create-release script to include docs and necessary txt
    files. (kasha)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11001. Fix test-patch to work with the git repo. (kasha)

    HADOOP-11065. Rat check should exclude "**/build/**". (kasha)

Release 2.5.0 - 2014-08-11

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-10498. Add support for proxy server. (daryn)

    HADOOP-9704. Write metrics sink plugin for Hadoop/Graphite (Chu Tong, Alex Newman and Babak Behzad via raviprak)

    HADOOP-8943. Support multiple group mapping providers. (Kai Zheng via brandonli)

    HADOOP-9361 Strictly define the expected behavior of filesystem APIs and
    write tests to verify compliance (stevel)

  IMPROVEMENTS

    HADOOP-10451. Remove unused field and imports from SaslRpcServer.
    (Benoy Antony via jing9)

    HADOOP-10345. Sanitize the the inputs (groups and hosts) for the proxyuser
    configuration. (Benoy Antony via jing9)

    HADOOP-10454. Provide FileContext version of har file system. (Kihwal Lee
    via jeagles)

    HADOOP-10104. Update jackson to 1.9.13 (Akira Ajisaka via stevel)

    HADOOP-10503. Move junit up to v 4.11. (cnauroth)

    HADOOP-10535. Make the retry numbers in ActiveStandbyElector configurable.
    (jing9)

    HADOOP-10322. Add ability to read principal names from a keytab.
    (Benoy Antony and Daryn Sharp via kihwal)

    HADOOP-10549. MAX_SUBST and varPat should be final in Configuration.java.
    (Gera Shegalov via cnauroth)
